# LeeFirebase

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchFireBase.cmake
include/: Defination.h  LeeFirebaseAuth.h
src/: LeeFirebaseAuth.cpp
